added URI support for more robust URL handling