@@ -10,8 +10,10 @@ package rentalcar.web;
 */
 
 import java.net.URL;
+import java.net.URI;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.io.DataOutputStream;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -22,16 +24,23 @@ public class Request {
 
   final static String EMPTY_RESPONSE = "{}";
 
-  //private static final String SERVER = "https://rentalcar.herokuapp.com/";
-  private static final String SERVER = "http://localhost:3000/";
+  /** LocalHost configuration */
+  final static String PROTOCOL = "http";
+  final static String HOST = "localhost";
+  final static int PORT = 3000;
+
+  /** Heroku configuration */
+  // final static String PROTOCOL = "https";
+  // final static String HOST = "rentalcar.herokuapp.com";
+  // final static int PORT = null;
 
   private static void _handleHTTPError(int code) {
     System.out.println("x A web request failed with code " + code + ". Implement _handleHTTPError");
   }
 
-  private String _request(String _url, String _method) {
+  private String _request(String path, String _method) {
     try {
-      URL url = new URL(SERVER + _url);
+      URL url = new URI(PROTOCOL, null, HOST, PORT, path, null, null).toURL();
       HttpURLConnection conn = (HttpURLConnection)url.openConnection();
       conn.setRequestMethod(_method);
       int status = conn.getResponseCode();
@@ -44,6 +53,9 @@ public class Request {
         response += (char)data;
       conn.disconnect();
       return response;
+    } catch (URISyntaxException e) {
+      System.out.println("x URISyntaxException: " + e.getMessage());
+      return EMPTY_RESPONSE;
     } catch (MalformedURLException e) {
       System.out.println("x MalformedURLException: " + e.getMessage());
       return EMPTY_RESPONSE;
@@ -55,24 +67,24 @@ public class Request {
 
   public Request() {}
 
-  public String GET (String _url)  {
-    String response = _request(_url, "GET");
+  public String GET (String path)  {
+    String response = _request(path, "GET");
     return response;
   }
 
-  public String PUT (String _url) {
-    String response = _request(_url, "PUT");
+  public String PUT (String path) {
+    String response = _request(path, "PUT");
     return response;
   } 
 
-  public String DELETE (String _url) {
-    String response = _request(_url, "DELETE");
+  public String DELETE (String path) {
+    String response = _request(path, "DELETE");
     return response;
   }
   
-  public static String POST (String _url, String params) {
+  public static String POST (String path, String params) {
     try {
-      URL url = new URL(SERVER + _url);
+      URL url = new URL(HOST + path);
       HttpURLConnection conn = (HttpURLConnection)url.openConnection();
       conn.setDoOutput(true);
       conn.setRequestMethod("POST");
